--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
               </p>
               <div class="bottom-text">
                   <p>The game is 12 minutes long.
-                      <br>Please play alone, in a quiet surroundings with no interruptions.
+                      <!-- <br>Please play alone, in a quiet surroundings with no interruptions.
                       <br>
-                      <br>Thanks and enjoy the game!
+                      <br>Thanks and enjoy the game! -->
                   </p>
                   <button id="done-training-5">Let's play</button>
               </div>
