updates to styles and focus

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <!-- screen 2 -->
             <div id="training-1">
-              <p>In this game you are ging to explore the space of "shifting shapes"
+              <p>In this game you are going to explore the space of "shifting shapes"
                 <br>and make interesting and beautiful shapes. 
               </p>
               <p>To make these shapes you are going to be moving these green blocks on the screen</p>
@@ -41,13 +41,13 @@
 
             <!-- screen 3 -->
             <div id="training-2" class="hidden">
-              <p>You can move any block provided that all other blocks still touch each other.
+              <p>You can move any block provided that all other blocks touch each other.
                 <br>If there is a block you cannot move, choose another one.
               </p>
 
               ​<div class="bottom-text">
                 <p>You can move as many blocks as you like 
-                  <br>until you find a shape that is interesting and beautiful to you. </p>
+                  <br>until you find a shape that is interesting and beautiful. </p>
                 <br><button id="done-training-2">Got it</button>
               </div> 
             </div>
@@ -68,7 +68,7 @@
             <div id="training-4" class="hidden">
               <p></p>
               <div class="bottom-text">
-                  <h1 id="training-title">Practice - wait for further instructions.</h1>
+                  <h1 id="practice-title">Practice - please wait for further instructions.</h1>
                   <button id="done-training-4">Continue</button>
               </div>
             </div>
@@ -76,7 +76,7 @@
             <!-- screen 6 -->
             <div id="training-5" class="hidden">
               <p>When the game is over 
-                <br>you will get to see all of the shapes you have made
+                <br>you will get to see all the shapes you have made
                 <br>and pick your 5 favorite shapes.
               </p>
               <div class="bottom-text">
@@ -116,8 +116,7 @@
           </div>
           </div>
           <div id="selection-gui">
-            <p id="gallery-instructions">Below are the shapes you've collected during the game. 
-              <br>Please choose the 5 most creative shapes among them.
+            <p id="gallery-instructions">Please choose the 5 most creative shapes among the shapes you saved.
             </p>
             <button id="done-selection">Done</button>
             <button id="previous-page-button">Previous page</button>
