--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
           <!-- screen 1 -->
           <div id="intro-gui">
-            <h1>Welcome to the game of shiting shapes</h1>
-            <p>Your goal is to discover intersting and beautiful shapes.</p>
+            <h1>Welcome to the game of shifting shapes</h1>
+            <p>Your goal is to discover interesting and beautiful shapes.</p>
             <p>To continue, please enter the unique ID given to you</p>
             <br>
             <p><input id="user-provided-id"></p>
@@ -56,7 +56,7 @@
             <div id="training-3" class="hidden">
               <p>When you make a shape that you find interesting and beautiful 
                 <br>you can save it by clicking on the grey box, 
-                <br>or on the "Collect Shape" button, 
+                <br>or on the "Collect shape" button, 
                 <br>or by pressing the button in your hand.</p>
               <div class="bottom-text">
                 <!-- <p>אפשר לשמור צורה גם על ידי לחיצה על הלחצן הנוסף שבידך.</p> -->
