--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </p>
 
               ​<div class="bottom-text">
-                <p>You can move as many blocks as you like 
+                <p>While playing, move as many blocks as you like 
                   <br>until you find a shape that is interesting and beautiful. </p>
                 <br><button id="done-training-2">Got it</button>
               </div> 
@@ -173,6 +173,8 @@
   <script src="deps/underscore.js"></script>
   <script src="deps/redmetrics.js"></script>
 
-  <script src="bundle.js"></script>
+  <!-- build:js -->
+  <script type="module" src="src/game.js"></script>
+  <!-- endbuild -->
   </body>
 </html>
