--- a/index.html
+++ b/index.html
@@ -173,8 +173,6 @@
   <script src="deps/underscore.js"></script>
   <script src="deps/redmetrics.js"></script>
 
-  <!-- build:js -->
-  <script type="module" src="src/game.js"></script>
-  <!-- endbuild -->
+  <script src="bundle.js"></script>
   </body>
 </html>
