--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
               ​<div class="bottom-text">
                 <p>While playing, move as many blocks as you like 
-                  <br>until you find a shape that is interesting and beautiful. </p>
+                  <br>until you find a shape that is interesting and beautiful to you. </p>
                 <br><button id="done-training-2">Got it</button>
               </div> 
             </div>
