--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
               ​<div class="bottom-text">
                 <p>While playing, move as many blocks as you like 
-                  <br>until you find a shape that is interesting and beautiful to you. </p>
+                  <br>until you find a shape that is interesting and beautiful. </p>
                 <br><button id="done-training-2">Got it</button>
               </div> 
             </div>
@@ -80,7 +80,7 @@
                 <br>and pick your 5 favorite shapes.
               </p>
               <div class="bottom-text">
-                  <p>The game is 12 minutes long.
+                  <p id="game-length-sentence">The game is 12 minutes long.
                       <!-- <br>Please play alone, in a quiet surroundings with no interruptions.
                       <br>
                       <br>Thanks and enjoy the game! -->
