Fix bug that causes crash
Fixed bug in index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <br>and pick your 5 favorite shapes.
               </p>
               <div class="bottom-text">
-                  <p>The game is 12 minutes long.
+                  <p id="game-length-sentence">The game is 12 minutes long.
                       <!-- <br>Please play alone, in a quiet surroundings with no interruptions.
                       <br>
                       <br>Thanks and enjoy the game! -->
